test: add TestContainers integration test and fix SonarLint issues